美化剪贴板界面

--- a/内存卡_async/index.html
+++ b/内存卡_async/index.html
@@ -14,7 +14,7 @@
 	<p><a href="webgame/webgame.html">网页游戏</a></p>
 	<p><a href="upload.html">文件上传</a></p>
 	<p><a href="video_index.html">在线影院</a></p>
-	<p><a href="/clipboard">剪切面板</a></p>
+	<p><a href="/clipboard.html">剪贴面板</a></p>
 	<p><a href="/setTime.html">配置时间</a></p>
 	<p><a href="/wificonnect">模式转换</a></p>
 	</center>
