--- a/内存卡_async/webgame/webgame.html
+++ b/内存卡_async/webgame/webgame.html
@@ -11,11 +11,8 @@
 	<img id="logo" src="/logo.jpg" width="200" height="200"/>
 	</center>
 	<center>
-	<p><form action="/list">老游戏：
-	<input type="hidden" name="folder" value="/webgame/oldGame">
-	<input type="hidden" name="page" value="1">
-	<input type="submit" value="进入">
-	</form></p>
+	<br>
+	<p><a href="/webgame/oldGame.html">老游戏</a></p>
 	</center>
 	
 </body>
